Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.39
* Fixed Internal Server Error clicking through ar/ap report (Chris T, 1022)
* Fixed internal server error deleting part (Chris T, 1027)

Changelog for 1.3.38
* Fixed AR/AP transactions resetting currency/exchange rate (Chris T)
* Fixed adding vouchers not checking for locked/approved batches (Chris T 1025)
* Fixed can't delete pricematrix entries from customer screen (Chris T, 893)
* Fixed language change on order to invoice conversion (Chris T, 896)
* Fixed ar/ap tax check inconsistency (Chris T, 919)
* Fixed inputs ignored for email addresses sending statements (Chris T, 920)
* Fixed negative overpayments showing as positive (Chris T, 926)
* Fixed permission denied errors after upgrading copied db (Chris T, 956)
* Fixed "access denied" when deleting unused tax account (Chris T, 967)
* Fixed GL Report fails before entering transactions (Chris T, 977)
* Fixed start and end dates not shown on contact screen (Chris T, 979)
* Fixed employee showing up several times on search list (Chris T, 980)
* Fixed contact description not preserved on edit (Chris T, 981)
* Fixed useless buttons on credit div when no account active (Chris T, 1001)
* Backported requires() and requires_series() APIs from 1.4 (Chris T)
* Updated INSTALL to reflect better instructions for Apache 2.4 (Chris T)
* Fixed printed invoice not matching posted when 0 manual tax (Nick P, 1051)
* Updated Hungarian translation (P. Isvan)

Chris T is Chris Travers
Erik H is Erik Huelsmann
Nick P is Nick Prater
P. Isvan is Pongracz Istvan

Changelog for 1.3.37
* 1.3-1.2 downgrade now drops extensions (Chris T, 943)
* Fixed db names with spaces not supported (Chris T, 946)
* Fixed old code not working if clicked on after changing passwd (Chris 949)
* Fixed join projection issues in AP Outstanding (Chris T, 950)
* Added Apache 2.4 configuration file (Chris T)